--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.4.0",
     "element-plus": "^2.3.5",
     "pinia": "^2.0.36",
+    "sass": "^1.66.1",
+    "sass-loader": "^7.0.3",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
     "vue-style-loader": "^4.1.3",
@@ -27,6 +29,7 @@
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/tsconfig": "^0.4.0",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.66.1",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
     "vue-tsc": "^1.6.4"
