--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,13 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    // 若TS版本为5.x，此处为"node"
+    "moduleResolution": "node",
+    "outDir": "dist",
+    "types": [
+      "element-plus/global"
+    ]
+  }
 }
