--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autofit.js": "^3.0.7",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
