--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "autofit.js": "^3.0.7",
     "core-js": "^3.8.3",
     "echarts": "^5.4.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
