--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autofit.js": "^3.0.7",
+    "axios": "^1.6.3",
     "core-js": "^3.8.3",
     "echarts": "^5.4.3",
     "vue": "^3.2.13",
