--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "echarts": "^5.4.3",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
